[package]
name = "datafusion-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

[profile.release]
lto = true
strip = true

[dependencies]
jni = { version = '0.21' }
datafusion = { version = '42.1.0' }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.132"